# rs-project-template

./: README.md
template/: .gitignore  Cargo.toml  cargo-generate.toml
