[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"
description = "{{project-description}}"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mimalloc = { version = "*", default-features = false }
itertools = "0.12.0"
nom = "7.1.3"
glam = "0.24.2"
rayon = "1.8.0"
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "rust-project-template-bench"
path = "benches/benchmarks.rs"
harness = false

[profile.release]
lto = "fat"        # Link time optimization
codegen-units = 1  # Maximize optimization across the entire crate
panic = "abort"    # Make panic call abort instead of unwind
strip = true       # Reduce the binary size by removing debug symbols
